--- a/paymentGateway/pom.xml
+++ b/paymentGateway/pom.xml
@@ -14,7 +14,9 @@
 	<name>paymentGateway</name>
 	<description>payment gatway project</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>1.8</java.version>
+		<!-- Spring Cloud Dependencies -  so that version can be known to them-->
+		<spring-cloud.version>2021.0.5</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -55,8 +57,34 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+
+
+		<!--To Enable The reading From Configration File From Git Hub -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-server</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 	</dependencies>
+
+	<!-- Spring Cloud Dependencies-> You should add Dependency management-->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
 	<build>
 		<plugins>
 			<plugin>
